# yolov7infernece

./: README.md  videoTRTinfer.py
cpp/: CMakeLists.txt  main.cpp  yolo.cpp  yolo.h
triton_server_deploy/: README.md  client.py  labels.py  render.py
